--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,4 @@
 MONGO_URI = mongodb://localhost/xelor
 NODE_ENV = development
+SECRET_TOKEN =      #  <- Token
+JWT_EXPIRATION_TIME =    # <- Expiration
